package com.hust.openerp.taskmanagement.hr_management.infrastructure.output.persistence.repository;

import com.hust.openerp.taskmanagement.hr_management.infrastructure.output.persistence.entity.PayrollEntity;

import java.util.UUID;

public interface PayrollRepo extends IBaseRepository<PayrollEntity, UUID> {


}
