@startuml
!theme vibrant
skinparam package {
    roundCorner 10
    borderColor #5D6D7E
    backgroundColor #EAEDED
}

package "Domain Layer" {
    skinparam class {
        borderColor #AF7AC5
        backgroundColor #E8DAEF
    }
    class PayrollModel
    class PayrollDetailModel
    class StaffSalaryModel
}

package "Application Layer" {
    skinparam package {
        borderColor #2980B9
    }
    package "port.in" <<Ports>> {
        skinparam interface {
            borderColor #5DADE2
            backgroundColor #EBF5FB
        }
        interface UseCaseHandler
    }

    package "port.out" <<Ports>> {
        interface IPayrollPort
        interface IPayrollDetailPort
        interface IHolidayPort
        interface ICheckinoutPort
    }

    package "port.in.usecase" <<Use Cases>> {
        skinparam class {
            borderColor #2ECC71
            backgroundColor #D5F5E3
        }
        class CreatePayrollHandler
        class PayrollCalculator <<Service>>
    }
}

package "Infrastructure Layer" {
    skinparam package {
        borderColor #BA4A00
    }
    package "input.rest" <<Adapters>> {
        skinparam class {
            borderColor #E59866
            backgroundColor #FDEDEC
        }
        class PayrollController
    }

    package "output.persistence" <<Adapters>> {
        skinparam class {
            borderColor #E59866
            backgroundColor #FDEDEC
        }
        class PayrollAdapter
        class PayrollDetailAdapter
        interface PayrollRepo
        interface PayrollDetailRepo
    }
}

' --- Định nghĩa các liên kết ---

' 1. Controller gọi vào Inbound Port
PayrollController --> UseCaseHandler

' 2. Use Case triển khai Inbound Port
CreatePayrollHandler .up.|> UseCaseHandler

' 3. Use Case sử dụng các Outbound Port và Service
CreatePayrollHandler o-- IPayrollPort
CreatePayrollHandler o-- IPayrollDetailPort
CreatePayrollHandler o-- PayrollCalculator

PayrollCalculator o-- ICheckinoutPort
PayrollCalculator o-- IHolidayPort

' 4. Adapters triển khai các Outbound Port
PayrollAdapter .up.|> IPayrollPort
PayrollDetailAdapter .up.|> IPayrollDetailPort


' 6. Adapters sử dụng Repository
PayrollAdapter --> PayrollRepo
PayrollDetailAdapter --> PayrollDetailRepo

' 7. Tương tác với Domain Models
CreatePayrollHandler --> PayrollModel
PayrollCalculator --> StaffSalaryModel
PayrollCalculator ..> PayrollDetailModel : "<<creates>>"

@enduml
